# EsunnyTap.Net

./: .gitignore  Build.md  EsunnyTap.Net.sln  LICENSE  ReadMe.md
.github/workflows/: publish.yml
.nuke/: build.schema.json  parameters.json
src/EsunnyTap.Net/: ErrorMap.cs  EsunnyTap.Net.csproj  EsunnyTapExtensions.cs  SWIGStringHelper.cs
src/EsunnyTap.Net/Swig/: EsunnyTapApi.cs  EsunnyTapApiPINVOKE.cs  ITapQuoteAPI.cs  ITapQuoteAPINotify.cs  ITapTradeAPI.cs  ITapTradeAPINotify.cs  SWIGTYPE_p_double.cs  SWIGTYPE_p_unsigned_long_long.cs  TapAPIAccQryReq.cs  TapAPIAccountInfo.cs  TapAPIAccountRentInfo.cs  TapAPIAccountRentQryReq.cs  TapAPIAccountStorageInfo.cs  TapAPIAccountStorageQryReq.cs  TapAPIAmendOrder.cs  TapAPIApplicationInfo.cs  TapAPIBillQryReq.cs  TapAPIBillQryRsp.cs  TapAPIChangePasswordReq.cs  TapAPICloseInfo.cs  TapAPICloseQryReq.cs  TapAPICommodity.cs  TapAPICommodityInfo.cs  TapAPICommodityOrderTimeInForceQryRsp.cs  TapAPICommodityOrderTypeQryRsp.cs  TapAPIContract.cs  TapAPIDeepQuoteInfo.cs  TapAPIDeepQuoteQryRsp.cs  TapAPIExchangeInfo.cs  TapAPIExchangeStateInfo.cs  TapAPIExchangeStateInfoNotice.cs  TapAPIExchangeStateInfoQryReq.cs  TapAPIFillInfo.cs  TapAPIFillQryReq.cs  TapAPIFundData.cs  TapAPIFundReq.cs  (+24 more)
src/EsunnyTapApi/: CMakeLists.txt  SwigGenerate.sh  linux-build.sh  swig.i  swig_wrap.cxx  swig_wrap.h  win-build.sh
src/EsunnyTapApi/include/: TapAPICommDef.h  TapAPIError.h  TapQuoteAPI.h  TapTradeAPI.h  TapTradeAPIDataType.h
tests/EsunnyTap.Demo/: EsunnyTap.Demo.csproj  Program.cs  QuoteTests.cs  TradeTests.cs  nuget.config
